--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,8 +23,8 @@
       </div>
       {% endif %}
     </div>
-    <footer>Jay</footer>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/anchor-js/4.1.0/anchor.min.js" integrity="sha256-lZaRhKri35AyJSypXXs4o6OPFTbTmUoltBbDCbdzegg=" crossorigin="anonymous"></script>
     <script>anchors.add();</script>
   </body>
+  <footer>Jay!!</footer>
 </html>
