--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -12,9 +12,10 @@
   <body>
     {% include navbar.html %}
     <div class="container-lg px-3 my-5 markdown-body">
-      {% if site.title and site.title != page.title %}
+      <!-- no need if using a custom navbar -->
+      <!-- {% if site.title and site.title != page.title %}
       <h1><a href="{{ "/" | absolute_url }}">{{ site.title }}</a></h1>
-      {% endif %}
+      {% endif %} -->
 
       {{ content }}
 
