--- a/docs/_layouts/curriculum_vitae.html
+++ b/docs/_layouts/curriculum_vitae.html
@@ -13,7 +13,7 @@ layout: default
         areas.forEach(area => {
           let spans = document.querySelectorAll(`[data-jl-areas~="${area}"]`);
           console.log("spans",spans);
-          spans.forEach(span => span.style.display = "block";
+          spans.forEach(span => span.style.display = "block");
         });
       } else {
         showAll = true;
