--- a/docs/_layouts/curriculum_vitae.html
+++ b/docs/_layouts/curriculum_vitae.html
@@ -24,7 +24,7 @@ layout: default
 
     if (showAll) {
       let spans = document.querySelectorAll('[data-jl-areas]');
-      spans.forEach(el => el.style.display = "block";
+      spans.forEach(el => el.style.display = "block");
     };
   };
   checkAreas();
